syntax = "proto3";

service ParticipantManage {
    rpc EventParticipantInsert(EPInsertReq) returns (EPInsertRsp) {}
    rpc GetParticipantListByUserId(GetPListByUserIdReq) returns (PEMessageList) {}
    rpc GetParticipantByUserAndEvent(PUserEventIdReq) returns (ParticipantMessage) {}
}

message participantMember {
    int64 leaderId = 1;
    repeated int64 memberId = 2;
}

message EPInsertReq {
    int64 eventId = 1;
    repeated participantMember participantMemberList = 2;
}

message EPInsertRsp {
    string message = 1;
}

message GetPListByUserIdReq {
    int64 userId = 1;
}

message PEMessage {
    int64 participantId = 1;
    int64 referEventId = 2;
}

message PEMessageList {
    repeated PEMessage PEList = 1;
}

message PUserEventIdReq {
    int64 userId = 1;
    int64 eventId = 2;
}

message ParticipantMessage {
	int64 participantId = 1;
	int64 eventId = 2;
	int64 userId = 3;
	int64 teamId = 4;
	double credit = 5;
	bool leader = 6;
}